--- a/style.css
+++ b/style.css
@@ -9,16 +9,26 @@
     -moz-transform: translateX(-50%) translateY(-50%);
     -webkit-transform: translateX(-50%) translateY(-50%);
     transform: translateX(-50%) translateY(-50%);
+    background-color: hsl(220,15%,55%);
   }
   
+.container{
+    width: 300px;
+    height: 430px;
+    background-color: hsl(0, 0%, 100%);
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
-  .qr-code{
-      width:  250px;
-      border-radius: 10px;
-  }
+
+  
   p{
       font-size: 12px;
       text-align: center;
+      color: hsl(220, 15%, 55%)
+      
 
       
 
@@ -28,3 +38,13 @@
       padding-top: 1rem;
       text-align: center;
   }
+  .qr-code{
+    width:  250px;
+    border-radius: 10px;
+}
+.content{
+
+
+
+}
+
